feat(logo): create function to print the logo to console

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#4a0081",
-        "activityBar.activeBorder": "#9f5b00",
-        "activityBar.background": "#4a0081",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#9f5b00",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#2d004e",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#4a0081",
-        "titleBar.activeBackground": "#2d004e",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#2d004e99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+      "activityBar.activeBackground": "#9a92bd",
+      "activityBar.activeBorder": "#e7dad7",
+      "activityBar.background": "#9a92bd",
+      "activityBar.foreground": "#15202b",
+      "activityBar.inactiveForeground": "#15202b99",
+      "activityBarBadge.background": "#e7dad7",
+      "activityBarBadge.foreground": "#15202b",
+      "statusBar.background": "#7d72aa",
+      "statusBar.foreground": "#e7e7e7",
+      "statusBarItem.hoverBackground": "#9a92bd",
+      "titleBar.activeBackground": "#7d72aa",
+      "titleBar.activeForeground": "#e7e7e7",
+      "titleBar.inactiveBackground": "#7d72aa99",
+      "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#2d004e",
+    "peacock.color": "#7d72aa",
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
